Add link color styling with primary gradient

--- a/styles.css
+++ b/styles.css
@@ -90,6 +90,8 @@ body {
   animation: float 20s infinite linear;
 }
 
+a.link{color: --primary-gradient;}
+
 .shape-1 {
   width: 100px;
   height: 100px;
