--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,8 @@ body {
   min-height: 100vh;
 }
 
-//lien ajouté
+/*lien ajouté*/
+
 a:link{color: var(--primary-gradient);}
 a:active{color: var(--primary-gradient);}
 
